--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_people"
+        android:id="@+id/main_activity_recycler_people"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
