--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,24 +16,35 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             >
-         <EditText
+
+            <EditText
                 android:id="@+id/main_activity_search"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:hint="@string/hint"
                 android:layout_weight="1"
+                android:autofillHints=""
+                android:hint="@string/hint"
                 android:inputType="text"
-                android:autofillHints="" />
+                android:minHeight="48dp" />
             <Button
                 android:id="@+id/main_activity_favorite_button"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:text="@string/favourite"/>
     </LinearLayout>
+
+        <TextView
+            android:id="@+id/main_activity_welcome_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/welcome_text_view"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/main_activity_recycler_people"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+
         />
     </LinearLayout>
 
